<resources>
    <string name="app_name">Youtube Downloader</string>
    <string name="enter_url">Enter url</string>
    <string name="url_not_found">Url not found</string>
    <string name="status">Status</string>
    <string name="download_complete">Download Complete</string>
    <string name="download_start">Download started</string>
    <string name="download_failed">Download Failed</string>
    <string name="downloading">Downloading.....</string>
    <string name="successful">Successful</string>
    <string name="successful_detail_message">Download completed successfully</string>
    <string name="ok">Ok</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="unsuccessful_detail_message">Download failed unfortunately, please try again</string>
    <string name="team_travers">Team Travers</string>
    <string name="developed_by">Developed By</string>
    <string name="tag_line">Fastest youtube downloader ever</string>
    <string name="close_application">Close Application</string>
    <string name="exit_from_app">Exit from app</string>
    <string name="want_to_close_app">Do you want to exit from app?</string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>
    <string name="folder">Folder</string>
    <string name="folder_change_long_text">Change your download directory</string>
    <string name="thanks_for_being_with_us">Thanks for being with us</string>
    <string name="enter_youtube_url">Enter youtube url</string>
    <string name="be_default_download_directory">By default the video downloaded in the following directory</string>
    <string name="default_directory_path">Download/fast-youtube-downloader</string>
</resources>