<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:id="@+id/FirstLine"
            android:layout_width="8dp"
            android:layout_height="112dp"
            android:background="@drawable/splash_drawable"/>

        <View
            android:id="@+id/SecondLine"
            android:layout_toRightOf="@id/FirstLine"
            android:layout_width="8dp"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@color/md_orange_600"
            android:layout_height="128dp"
            android:background="@drawable/splash_drawable"/>

        <View
            android:id="@+id/ThirdLine"
            android:layout_toRightOf="@id/SecondLine"
            android:layout_marginLeft="8dp"
            android:layout_width="8dp"
            android:layout_height="144dp"
            android:backgroundTint="@color/md_green_500"
            android:background="@drawable/splash_drawable"/>

        <View
            android:id="@+id/FourthLine"
            android:layout_toRightOf="@id/ThirdLine"
            android:layout_marginLeft="8dp"
            android:layout_width="8dp"
            android:layout_height="128dp"
            android:backgroundTint="@color/md_red_400"
            android:background="@drawable/splash_drawable"/>

        <View
            android:id="@+id/FifthLine"
            android:layout_toRightOf="@id/FourthLine"
            android:layout_marginLeft="8dp"
            android:layout_width="8dp"
            android:layout_height="112dp"
            android:backgroundTint="@color/md_cyan_600"
            android:background="@drawable/splash_drawable"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/AppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="@color/md_grey_800"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/TagLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AppName"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="@color/md_green_900"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:text="@string/tag_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/DevelopedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_by"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/md_grey_800"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/DeveloperName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/team_travers"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/md_green_400"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>