<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:elevation="1dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/a_roundbg"
            android:elevation="10dp"
            android:translationZ="10dp">

            <ImageView
                android:id="@+id/BackButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_left_arrow"
                android:tint="@color/md_red_400" />

        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--top banner part-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="272dp"
                android:background="@drawable/settings">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/settings"
                        android:textColor="@color/md_red_400"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/md_white_1000"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true"
                app:elevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <!--Folder-->
                    <LinearLayout
                        android:id="@+id/language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:layout_marginTop="8dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:weightSum="8"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_weight="1.4">

                            <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="fitCenter"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:src="@drawable/ic_change"
                                app:backgroundTint="@color/md_white_1000"
                                android:tint="@color/md_red_400"
                                app:fabSize="mini"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="5.4"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:paddingTop="0dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/folder"
                                android:textColor="@color/md_black_1000"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/app_language"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top"
                                android:paddingTop="4dp"
                                android:paddingBottom="4dp"
                                android:paddingRight="4dp"
                                android:gravity="top"
                                android:text="@string/folder_change_long_text"
                                android:textColor="@color/md_grey_800"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:padding="8dp"
                                android:background="@drawable/circle_border_settings_new"
                                android:src="@drawable/ic_sync_new" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/thanks_for_being_with_us"
        android:gravity="center"
        android:textColor="@color/md_green_600"
        android:textStyle="bold"
        android:textSize="18sp"/>

</RelativeLayout>
