<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:elevation="8dp"
            android:orientation="vertical"
            android:background="@drawable/a_roundbg"
            android:translationZ="4dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_left_arrow"
                android:padding="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_marginTop="24dp"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/md_grey_800"/>

        <LinearLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:gravity="center"
            android:elevation="8dp"
            android:orientation="vertical"
            android:background="@drawable/a_roundbg"
            android:translationZ="4dp">

            <ImageView
                android:id="@+id/settingsButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_settings"
                android:padding="8dp" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="0dp"
                app:cardBackgroundColor="@color/md_white_1000"
                android:elevation="0dp"
                android:translationZ="0dp"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/urlEditText"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/new_edit_text_rectangle_bg"
                        android:focusable="true"
                        android:hint="@string/enter_youtube_url"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:maxLength="250"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:scrollHorizontally="true"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:elevation="8dp"
                        android:orientation="vertical"
                        android:background="@drawable/a_roundbg"
                        android:translationZ="4dp">

                        <ImageView
                            android:id="@+id/startDownload"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_download"
                            android:padding="12dp" />

                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:padding="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_status"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/status"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="20sp"/>

                    <ProgressBar
                        android:id="@+id/pb_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_gravity="center"
                        tools:visibility="visible" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3017517613101119/2622088518">

    </com.google.android.gms.ads.AdView>

</RelativeLayout>
